# cyntax

./: .gitignore  Cargo.toml  a  harness.c  input copy 2.c  input copy 3.c  input copy 4.c  input copy 5.c  input copy 6.c  input copy.c  input.c  input.h  input2.h  input3.h  rustfmt.toml  test.c  test.sh  test2.h  workspace.toml
cyntax_ast_lower/: Cargo.toml
cyntax_ast_lower/src/: check.rs  expr.rs  lib.rs  stmt.rs  ty.rs  visit.rs
cyntax_backend/: Cargo.toml
cyntax_backend/src/: lib.rs
cyntax_common/: Cargo.toml
cyntax_common/src/: ast.rs  ctx.rs  lib.rs  spanned.rs  sparsechars.rs
cyntax_consteval/: Cargo.toml
cyntax_consteval/src/: lib.rs
cyntax_errors/: Cargo.toml
cyntax_errors/src/: errors.rs  lib.rs
cyntax_hir/: Cargo.toml
cyntax_hir/src/: lib.rs
cyntax_hir_lower/: Cargo.toml
cyntax_hir_lower/src/: lib.rs
cyntax_lexer/: Cargo.toml
cyntax_lexer/src/: lexer.rs  lib.rs  prelexer.rs  spanned.rs  tests.rs
cyntax_mir/: Cargo.toml
cyntax_mir/src/: lib.rs
cyntax_parser/: Cargo.toml
cyntax_parser/src/: ast.rs  constant.rs  decl.rs  expr.rs  lib.rs  patterns.rs  stmt.rs  ty.rs
cyntax_preprocessor/: Cargo.toml
cyntax_preprocessor/src/: expand copy.rs  expand.rs  lib.rs  macros.rs  matcher.rs  prepend.rs  substitute.rs  tests.rs  tree.rs
cyntax_preprocessor/tests/: 01.c  03.c  04.c
src/: lexer.rs  location.rs  main.rs  old_preprocess.rs  pp.rs  tests.rs
src/parser/: ast.rs  declaration.rs  expression.rs  mod.rs  new_expression.rs  specifier.rs  statement.rs
src/preprocess/: ast.rs  directive.rs  eval.rs  expand.rs  include.rs  mod.rs  print.rs  process.rs  tree.rs
sweet_scratch/: Cargo.toml  README.md
sweet_scratch/src/: main.rs
