[package]
name = "cyntax"
version = "0.1.0"
edition = "2024"

[dependencies]
cyntax_errors = {path = "./cyntax_errors"}

cyntax_lexer = {path = "./cyntax_lexer"}
cyntax_common = {path = "./cyntax_common"}
cyntax_preprocessor = {path = "./cyntax_preprocessor"}
smallvec = "1.14.0"
bumpalo = "3.17.0"
codespan-reporting = "0.12.0"
