[package]
name = "cyntax"
version = "0.1.0"
edition = "2024"

[dependencies]
cyntax_errors = {path = "./cyntax_errors"}

cyntax_lexer = {path = "./cyntax_lexer"}
cyntax_common = {path = "./cyntax_common"}
cyntax_preprocessor = {path = "./cyntax_preprocessor"}
cyntax_parser = {path = "./cyntax_parser"}
cyntax_ast_lower = {path = "./cyntax_ast_lower"}

codespan-reporting = "0.12.0"
colored = "3.0.0"