[package]
name = "cyntax_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
cranelift = "0.119.0"
cranelift-frontend = "0.119.0"
cranelift-module = "0.119.0"
cranelift-native = "0.119.0"
cranelift-object = "0.119.0"
cyntax_common = {path = "../cyntax_common"}
cyntax_mir = {path = "../cyntax_mir"}
