[package]
name = "cyntax_lexer"
version = "0.1.0"
edition = "2024"

[dependencies]
peekmore = "1.3.0"
smallvec = "1.14.0"
strum = "0.27.1"
strum_macros = "0.27.1"
cab-why = {git = "https://github.com/accusitive/carcass/", default-features = false}
# cab-why = {path = "../../carcass/cab/cab-why", default-features = false}