[package]
name = "cyntax_lexer"
version = "0.1.0"
edition = "2024"

[dependencies]
peekmore = "1.3.0"
smallvec = "1.14.0"
strum = "0.27.1"
strum_macros = "0.27.1"
# Use my own fork of cab-why for faster iteration times
cab-why = {git = "https://github.com/accusitive/carcass/", rev="87c3d2a806f20fa2e1c2d8633815e1f64579e703", default-features = false}